--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,17 +3,6 @@ name: Deploy React App to GitHub Pages
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
-permissions:
-  contents: write
-  pages: write
-  id-token: write
-
-concurrency:
-  group: "pages"
-  cancel-in-progress: true
 
 jobs:
   build:
@@ -35,8 +24,13 @@ jobs:
     - name: Build React app
       run: npm run build
       env:
-        REACT_APP_API_URL: https://book-api-8z8v.onrender.com/api
+        REACT_APP_API_URL: https://book-api.onrender.com
         PUBLIC_URL: /books.github.io
+    
+    - name: Fix SPA routing for GitHub Pages
+      run: |
+        cp build/index.html build/404.html
+        echo "SPA routing fixed for GitHub Pages"
     
     - name: Upload build artifacts
       uses: actions/upload-pages-artifact@v3
