--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,10 +4,22 @@ on:
   push:
     branches: [ main ]
 
+# تنظیم permissions صحیح
+permissions:
+  contents: read
+  pages: write
+  id-token: write  # این خط باید باشد
+
+# Allow one concurrent deployment
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
+
 jobs:
   build:
     runs-on: ubuntu-latest
-    
+    permissions:
+      contents: read  # Job-level permissions
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
@@ -22,29 +34,26 @@ jobs:
       run: npm ci
     
     - name: Build React app
-      run: npm run build
+      run: CI=false npm run build
       env:
-        REACT_APP_API_URL: https://book-api.onrender.com
+        REACT_APP_API_URL: https://book-api-8z8v.onrender.com/api
         PUBLIC_URL: /books.github.io
     
-    - name: Fix SPA routing for GitHub Pages
-      run: |
-        cp build/index.html build/404.html
-        echo "SPA routing fixed for GitHub Pages"
+    - name: Fix SPA routing
+      run: cp build/index.html build/404.html
     
-    - name: Upload build artifacts
+    - name: Upload artifact
       uses: actions/upload-pages-artifact@v3
       with:
         path: ./build
 
   deploy:
     if: github.ref == 'refs/heads/main'
-    needs: build
-    runs-on: ubuntu-latest
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    
+    runs-on: ubuntu-latest
+    needs: build
     steps:
     - name: Deploy to GitHub Pages
       id: deployment
